# ChangeLog for media-radio/radiotray
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/ChangeLog,v 1.30 2013/07/22 11:07:29 mgorny Exp $

*radiotray-0.7.3-r2 (22 Jul 2013)

  22 Jul 2013; Michał Górny <mgorny@gentoo.org> +radiotray-0.7.3-r2.ebuild,
  -radiotray-0.7.3-r1.ebuild, radiotray-9999.ebuild:
  Convert to distutils-r1, bug #477722.

  27 Dec 2012; Christoph Junghans <ottxor@gentoo.org> radiotray-9999.ebuild:
  mercurial.eclass respects  now

  02 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org> radiotray-0.7.2.ebuild,
  radiotray-0.7.3-r1.ebuild, radiotray-9999.ebuild:
  Pin gstreamer dependencies.

  25 Nov 2012; Markos Chandras <hwoarang@gentoo.org> radiotray-0.7.2.ebuild,
  radiotray-0.7.3-r1.ebuild, radiotray-9999.ebuild:
  Fix license to be GPL-1+. Bug #444638. Thanks to Aljosha Papsch
  <papsch.al@googlemail.com>

  08 Sep 2012; Markos Chandras <hwoarang@gentoo.org> radiotray-0.7.3-r1.ebuild,
  radiotray-9999.ebuild:
  Remove bogus pkg_setup

*radiotray-0.7.3-r1 (08 Sep 2012)

  08 Sep 2012; Markos Chandras <hwoarang@gentoo.org> +radiotray-0.7.3-r1.ebuild,
  -radiotray-0.7.3.ebuild, radiotray-9999.ebuild:
  Migrate to EAPI4 and python-distutils-ng. Restrict pkg_setup to python2. Bug
  #438184. Thanks to gentoo@leiqing.org

*radiotray-0.7.3 (17 Aug 2012)

  17 Aug 2012; Markos Chandras <hwoarang@gentoo.org> +radiotray-0.7.3.ebuild:
  Version bump

  05 Aug 2012; Markos Chandras <hwoarang@gentoo.org> radiotray-0.7.2.ebuild:
  Add dev-python/pyxdg to DEPEND. Bug #429986

  18 Jun 2012; Agostino Sarubbo <ago@gentoo.org> -radiotray-0.6.4.ebuild,
  -radiotray-0.7.1.ebuild:
  Remove old

  24 Mar 2012; Markos Chandras <hwoarang@gentoo.org> radiotray-0.7.2.ebuild:
  x86 stable. Bug #407475

  09 Mar 2012; Markos Chandras <hwoarang@gentoo.org> radiotray-0.7.2.ebuild:
  Stable on amd64 wrt bug #407475

*radiotray-0.7.2 (04 Feb 2012)
