@@ -3,27 +3,27 @@ Hash: SHA256
 
 DIST radiotray-0.7.2.tar.gz 94868 SHA256 90d36cb910d8ca9c1b66a1cb585c7cc85d61c3a63bfed4ea63923e8121cfa1ac
 DIST radiotray-0.7.3.tar.gz 94678 SHA256 709cbabbd03627270f60cd56084803d6f03fe0e14fbfc15b6325b4c5bd9faf2d SHA512 84e32d7be0db87e7a42464dae5207fd4c0f52208f4c92c5033fd51695276be5af013c824bcfbf1944d34977a82702c6d00f31079563c8ce477d166df64bcfb84 WHIRLPOOL b32b9f9a35bfbd6d4fd5ca86ed3ab878c24e45b3ec70372c2508985b9240458bb56d44465f1ddf3a58eac70700820451bc06bad25adf670a54e8343a915cec1c
-EBUILD radiotray-0.7.2.ebuild 1014 SHA256 f5b271c36516cebcf68242a1c63011429e5c157b157e7096ac5a6a453b6a0468 SHA512 c7ac2a6bb5881343a63ea71de588b763a2220d6204b3663e8df82f196c3c37e1defcf603922102ef731a0d99e832379d79501edad4d7605e2295b62b26fad50c WHIRLPOOL 70f89fa9518d7146cafd924f400bf8763beb5c2a48b596ea459253836dcb231cf3505c641238f21f94fe2baba8845534c65227d0b830f413b23494ee754a8667
-EBUILD radiotray-0.7.3-r2.ebuild 1161 SHA256 c3c1ef0a89d8b4baca6bcf65fd21888181b198cffda9d184d68b294f4712d587 SHA512 da9167373f5ea24f258fbb46ba54d618538e3b3bb6e1b3b427b989a2da206699d906f3de3e360c2dc6ebb8c4706f8b5dd64450ac578a8d2a536b88a05a6d7fc2 WHIRLPOOL d8c902cd038ed674acf0b25de046a6f9b0aed233427f1e17a36cfaec9386d8a3efa7ee58b89d03c32f77d0e4a78ba67c8db909e254a0afae1e2ad29ca0763cd9
-EBUILD radiotray-9999.ebuild 1618 SHA256 9e946d4044167dcbcfc666debaae47a593b3d4e1e39196413bec3b10624dc30e SHA512 55c23c0e5b291db269f17b2a54f2b11f397c79c9bc15fddfdad230338fdf4fafcda17bd6beb8e5fae516a77059d653d1a0c5546540ead3a272d7a94da45d5c5e WHIRLPOOL 9678921013a7016720a27e3ee127e65f2fd83b1b868c6e42497534d0bf70b127a68fd5fb470f5df6b9eb8f268eb589492349def350c3f571cc88c643cea960c5
-MISC ChangeLog 5484 SHA256 e971b8dc1b26076db39411d01d3fcb1b87b17cd0fd96f3f733b5caf18adb0426 SHA512 16bf8c489f0b7c50c807a063b7347f5115de74bac1a77a8363f16edd7e204d7948ba1160471b85efc8979dd623c1a2258c8a4fe8efb1647f8e5028d014621609 WHIRLPOOL 71762da5087bff8423675288343c8d3b1e8015f78e224efa4d33c056a372a79bb5e1c17d6a97c0d80f172fa77120aa06f276509aecae330112bb9a87af15da0d
+EBUILD radiotray-0.7.2.ebuild 1037 SHA256 7a3e869f79b1eef7c2ffd95cdee698d5fe05f02dfa730f6fb6e8be0023b900a8 SHA512 8688347fb8b511bde57b717f5b2b1b8535f6de4315adf72ec1a60a7db3149dc395164064215b490b45a859ea47591ecc2662f466ea0a7fb6184991581d160cda WHIRLPOOL 0f296e085c29958a4f4df4a3c4b63dafbe8cd6e98dfaf663b7b5dc3377570d64b02a7723c4c1886ad627d4275d950816bd16566098759ce7a63afaf0f7b7ce6f
+EBUILD radiotray-0.7.3-r2.ebuild 1181 SHA256 adbab96f83f9d94dc7459924f709ce92a830dc115d2376fa2fff4df5c4a3546e SHA512 b7752ec27399809f10df74fb59352829267e962149208e31c932166408bc04224b255dc344952b44c99d8a3545965a007ab2005a3383f3edc7dc14cba43edfe2 WHIRLPOOL d670f65d710054d379290c1770518e4ff4919b823bcf0f4c20a0808e47f5ac205dff3fe06e2b151f6757116a64540356e8aa190da26b9c36842d9e5628d04413
+EBUILD radiotray-9999.ebuild 1639 SHA256 34974ecb48c1487b2dcfe801187619669365c7663cef650cecc25e4b0fc4b96d SHA512 6898caf6b065086d84aa357fa375a6b8876508f631675014a5535005e8da01b436254344295ef9bbb1b4cef2c163fdd93245a9716e15a53384a05d2a6749492b WHIRLPOOL 6b62aaf8971213c6dc635c55dc8caa69fea800ae372619fad28945ad8876a760df155718aea09866c551269424ff38da8cc484e63cf497539a1c206da9c9d759
+MISC ChangeLog 5674 SHA256 0a6ab389e6bf18ee87220a680dc0da1de7f5d2385fdd946ad7c41b7f76fdb1cf SHA512 a599ab5006cba61fdfb8ea6ab3a502da24ff24e77c5138ff226b3c529c89537778dc6d47876aced2e77ee89e624e4b2ef61cf2224dbe4e1c306c0ff91499f780 WHIRLPOOL 1f125ca61d390ef121bdca95c5c3cc32ec743cc69ca2eb244958ba20ee32f415e4ad90363d3bcfee7224a5b19070ef57050ac7cfa64c50e8a88bdd9786253529
 MISC metadata.xml 547 SHA256 0aa06ecd73860dac4e791dfeaeb30e4c438d3329f61e7803ff752a1575550c1e SHA512 951e1554f03f4e68af9485284147572a8cfa2e3e9555bcb74f4bab07d85ac125f8b49dab001b34db6d0f642e37736d918d2e854fa5b201987a81e17e30688f5d WHIRLPOOL 1b06d29887736e855da7571182d877a7a15fc5175269c1512f5572d635fd3a97f975ae5f76d1508009e4f767cc4574ae3d14540d4f1a53975a95beffb589033c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQJ8BAEBCABmBQJR7RKDXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRGRDhEM0MyMERDMzNBMkYzQzJFRTI3QjE5
-NjI3RjQ1NkY5REE3NjQzAAoJEJYn9Fb52nZDvP0P/2RD5gdjlRMp0uku6pCUwZ4f
-6AameE91oHtbLXb5veOnW5vHn8AGJOgBbisScLuWNZhDAoaRU1vKd2NpjOwTcvpg
-08B7bKtt6AmnJgsyf+RNjfl12zEelpAPCbasgKQlSvoQesuSsCdcs7dLdJUcG/Xf
-kS1jj7RjGLb6wjCI8/OuIKDwRzpc7lvNe9eEQJOjjL7YK0pQ+N5K5AjjK+bsBqOC
-Abv8VG9xep97yO+z5unIos36QpOfY58f+zOIEE+eYjsOrQHlBsghnzW1HWD8qZto
-kx1pgw3wxx8E1jItZ+hm7IEYTaVvhGYbIBmnsLzo3Uc2k041sG23VFA2QJuf5zs2
-xDUQ8CFqDE7yZTIr6YoVUQkGToWR1FvmSfZpqtytHMvZYrNr3NcYBA5U88IeVxhU
-FGu2Q/Y3Bug5WT3thtbNegkRa2p+luro/T/J95JiCw//EHeZMQoFAv8/c06BVJcC
-5E7/l56bK19DQlVZ58f4S57BknCivVMdEu5X0OcYMRB5sYa8uhUxZP0hpbH4DBRS
-8uqaHLeGsV486Bi7TpnMnQd9U5i1r6xxIzQyJCXQR6w9DDucArAuZZbTEiRRcZ+f
-9n/80MZUrCT0PgS89WnnJjMjX/P34wLgBqosUHRZFxE4OyhnkNqf8DqUsvuUWwZp
-Pz9D7J9Ot1r7Z+JD/gkg
-=BC44
+iQJ8BAEBCABmBQJSM6Z/XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88Ta0P/2MX4AzjWDaU/4qKAoeuKAXi
+yBUDhK15lg3xEuKWL2kxtqCKIYxhoHiG9sS1eHFogiiK440rN7jzE5PasgSwlQQp
+EbSf6n+Kccodz9HtZw9eacws5H9bTP5BySlLsHLuJDQI3VCocEup1DjiUdfuJc6+
+pV4wW8x4/RN8k7hyLkgZmVZGpkvxt82RQw1O8KhDVpoBkU7gXvQxYaXib5thfQyB
+z2w6ZhLo8hsN7F2+x26W+H224Iuga1MJG3UpDul1zL1GtGCE8MLGsawS0J8SEUsr
+NXNr/C52gapsFGTrwJHtqK+nwLG1U2XNIw2sdU3knAdXhBLLwKAbBZS5L+debxYr
+7VXL+QEeI3ONDFsPymYNDQs5rKGMJzUuAGna+ualazLhbTNG2GxhemoflOpoVRqc
+2BYXoSSUSYaorOmRKZheVJBVPskWAUu5NHk9Wzp9jr4D2mUSRd8FR0azhanptqVV
+n9KkN0Bd03rCVk+tUNaNWAZXJd/riauHP8Ntl6x4kse43kWHlTvfeoQXfoNBKTUz
+jhfhmDuanhOhmECVnx3JpeuITJGNnxdGpka6PfeZESTGghAlLQ0FEpyigeUyZqvQ
+ppj6+OWrApi7/eCO4YqXk16cGlLQVrTmfvKYPHQrRYz1YUQK6SlQJaHQPudks2HW
+a7cteGKIG8Mji9ngU5G3
+=sSXq
 -----END PGP SIGNATURE-----
