@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/radiotray-0.7.3-r2.ebuild,v 1.1 2013/07/22 11:07:29 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/radiotray-0.7.3-r2.ebuild,v 1.2 2013/09/13 23:58:59 hwoarang Exp $
 
 EAPI=5
 
@@ -16,7 +16,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="dev-python/dbus-python[${PYTHON_USEDEP}]
+RDEPEND="sys-apps/dbus[X]
+	dev-python/dbus-python[${PYTHON_USEDEP}]
 	dev-python/gst-python:0.10[${PYTHON_USEDEP}]
 	dev-python/pygtk[${PYTHON_USEDEP}]
 	dev-python/lxml[${PYTHON_USEDEP}]
