@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/radiotray-9999.ebuild,v 1.9 2013/07/22 11:07:29 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/radiotray-9999.ebuild,v 1.10 2013/09/13 23:58:59 hwoarang Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_6 python2_7 )
@@ -26,7 +26,8 @@ for x in ${LANGS}; do
 	IUSE="${IUSE} linguas_${x}"
 done
 
-RDEPEND="dev-python/gst-python:0.10[${PYTHON_USEDEP}]
+RDEPEND="sys-apps/dbus[X]
+	dev-python/gst-python:0.10[${PYTHON_USEDEP}]
 	dev-python/pygtk[${PYTHON_USEDEP}]
 	dev-python/lxml[${PYTHON_USEDEP}]
 	dev-python/pyxdg[${PYTHON_USEDEP}]
